# MICMAC

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  micmac_env.yml  micmiac_env.yml  pyproject.toml  setup.py
docs/: Makefile  api.rst  conf.py  requirements.txt
docs/source/: api.rst  conf.py  external.rst  foregrounds.rst  getting-started.rst  index.rst  likelihood.rst  noise.rst  toolbox.rst  tutorials.rst
micmac/: Classical_Gibbs_sampling.py  Harmonic_Likelihood_sampling.py  Non_param_Likelihood_sampling.py  Sampling_toolbox.py  __init__.py  algorithm_toolbox.py  customized_models.py  fisher.py  harmonic_Fisher_tools.py  harmonic_likelihood.py  init_mixingmatrix.py  init_mixingmatrix_different_values_for_different_patches.py  jax_Sampling_toolbox.py  jax_tools.py  mixingmatrix.py  multires_shape.py  noisecovar.py  nonparam_likelihood_sampling.py  pixel_likelihood.py  proba_functions.py  sampling.py  statistics_toolbox.py  templates_spv.py  temporary_tools.py  tools.py  utils.py
micmac/foregrounds/: __init__.py  initmixingmatrix.py  mixingmatrix.py  models.py  templates.py
micmac/likelihood/: __init__.py  harmonic.py  initobjects.py  pixel.py  sampling.py
micmac/noise/: __init__.py  noisecovar.py
micmac/toolbox/: __init__.py  beams.py  fisher.py  statistics.py  tools.py  utils.py
src/: Gibbs_sampling.py  Non_param_Likelihood_sampling.py  Non_param_Likelihood_sampling_old.py  Sampling_toolbox.py  __init__.py  algorithm_toolbox.py  cornerplot_public.py  init_mixingmatrix.py  jax_Sampling_toolbox.py  jax_tools.py  mixingmatrix.py  noisecovar.py  proba_functions.py  sampling.py  tools.py
test_playground/: Fake_Fisher_matrix_LiteBIRD.txt  Fake_Fisher_matrix_LiteBIRD_v2.txt  Fake_Fisher_matrix_LiteBIRD_v3.txt  Fisher_matrix_LiteBIRD_EB_model_d0s0_noise_True_seed_42_lmin2_lmax128_v2.txt  Fisher_matrix_SO_SAT_EB_model_d7s0_noise_True_seed_42_lmin2_lmax128.txt  fisher_so-sat_d0s0_lmin2_lmax128_nomask_Alens1.0_r0.0_B_noiselens.txt  func_tools_for_tests.py  get_freq_maps_LiteBIRD_64.py  get_freq_maps_LiteBIRD_64_noc1.py  get_freq_maps_SO_128.py  get_freq_maps_SO_64.py  get_freq_maps_SO_64_lower_noise.py
test_playground/Data_Clement/: fisher_litebird_d0s0_lmin2_lmax128_masked_Alens1.0_r0.0_B_noiselens.txt  info_noise+CMB_beta_r_d0s0so-sat_lmin2_lmax256_nomask_Alens1.0_r0.01.txt  noise+CMB_beta_r_d0s0_so-sat_lmin2_lmax256_nomask_Alens1.0_r0.01.txt
test_playground/Paper_Runs_from_Dante/: multinode_verif_v109_v2.ipynb  multinode_verif_v109_v3.ipynb  multinode_verif_v109_v3b.ipynb  script_v109_v4.py
test_playground/Paper_runs/: Harm_counterpart_MH_generation.ipynb  corner_plot_SO_cutsky.ipynb  launch_v4.sh  launch_v5.sh  multinode_verif_v109_v1.ipynb  multinode_verif_v109_v2.ipynb  multinode_verif_v109_v3b.ipynb  script_v109_v3.py  script_v109_v4.py  script_v109_v4b.py
tests/: test_foregrounds.py  test_likelihood.py  test_mixingmatrix.py  test_tools.py
tutorials/: params_spv_LB.yaml  params_spv_SAT_nside0.yaml  params_spv_SAT_nside1.yaml  params_spv_tutorial.yaml  ps_input_components.ipynb  test_mixingmat.ipynb  tutorial_Harmonic_MH.ipynb  tutorial_get_freq_maps.py  tutorial_init_params_mixingmat.ipynb  tutorial_mixingmat.ipynb  tutorial_pixel_MICMAC.ipynb  tutorial_pixel_MICMAC_spv.ipynb  tutorial_steps_Gibbs.ipynb
(+1404 files in other folders)
